添加隐藏模式区别

--- a/src/main/webapp/vue/tnxvue/css/tnxvue.css
+++ b/src/main/webapp/vue/tnxvue/css/tnxvue.css
@@ -1,4 +1,8 @@
 /* tnxvue.css */
-tv-div, tv-span {
+tv-div[mode='v'], tv-span[mode='v'] {
     visibility: hidden;
+}
+
+tv-div[mode='d'], tv-span[mode='d'] {
+    display: none;
 }
