--- a/src/main/webapp/bs/tnx/css/tnxbs.css
+++ b/src/main/webapp/bs/tnx/css/tnxbs.css
@@ -1,7 +1,7 @@
 /**
  * tnxbs.css
  */
-.modal-doing .modal-content {
+.modal-loading .modal-content {
     text-align: center;
     padding: 30px;
     margin: 0 auto;
