添加客户端错误校验

--- a/src/main/webapp/bs/tnx/css/tnxbs.css
+++ b/src/main/webapp/bs/tnx/css/tnxbs.css
@@ -81,7 +81,7 @@
     cursor: pointer;
 }
 
-.fss-upload .fss-upload-preview .fss-upload-uploading {
+.fss-upload .fss-upload-preview .fss-upload-preview-mask {
     position: absolute;
     top: 1px;
     background-color: rgba(0, 0, 0, 0.2);
