修正初始化存储URL为空字符串时的错误

--- a/src/main/webapp/bs/tnx/css/tnxbs.css
+++ b/src/main/webapp/bs/tnx/css/tnxbs.css
@@ -27,7 +27,8 @@
     min-width: 100px;
 }
 
-.modal-toast .modal-content .fa {
+.modal-toast .modal-content .fa,
+.modal-toast .modal-content .far {
     font-size: 56px;
 }
 
