--- a/src/main/webapp/bs/tnx/css/tnxbs.css
+++ b/src/main/webapp/bs/tnx/css/tnxbs.css
@@ -12,8 +12,8 @@
     right: 0;
 }
 
-.btn:not(:first-child) {
-    margin-left: 7px;
+.btn:not(:last-child) {
+    margin-right: 7px;
 }
 
 .modal-toast .modal-content,
@@ -22,6 +22,7 @@
     padding: 30px;
     margin: 0 auto;
     color: #ffffff;
+    border: none;
     background-color: rgba(0, 0, 0, 0.5);
     width: auto;
     min-width: 100px;
