--- a/src/main/webcli/components/vue/element/tnxel.css
+++ b/src/main/webcli/components/vue/element/tnxel.css
@@ -21,6 +21,7 @@ body {
 
 .el-form-item__label,
 .el-form-item__content,
+.el-form-item__error,
 .el-input__inner {
     padding-left: 10px;
     padding-right: 10px;
