--- a/src/main/webcli/components/vue/element/tnxel.css
+++ b/src/main/webcli/components/vue/element/tnxel.css
@@ -26,3 +26,9 @@ body {
     padding-left: 10px;
     padding-right: 10px;
 }
+
+.el-alert {
+    width: unset;
+    margin: 1rem 10px;
+    padding: 10px 12px;
+}
