改进前端渲染前的视觉效果

--- a/src/main/webcli/components/vue/element/tnxel.css
+++ b/src/main/webcli/components/vue/element/tnxel.css
@@ -27,6 +27,10 @@ body {
     padding-right: 10px;
 }
 
+el-button {
+    visibility: hidden;
+}
+
 .el-alert {
     width: unset;
     margin: 1rem 10px;
