--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -19,12 +19,18 @@ body {
     margin-bottom: 0;
 }
 
-.el-form-item__label,
+.el-form-item__label {
+    padding-right: 10px;
+}
+
 .el-form-item__content,
 .el-form-item__error,
 .el-input__inner {
     padding-left: 10px;
-    padding-right: 10px;
+}
+
+.el-form-item__error {
+    min-width: 96px;
 }
 
 el-button {
