表格组件样式改进

--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -77,10 +77,29 @@ el-button {
 }
 
 .el-table td.tnxel-table_tags {
-    padding: 7px 0;
+    padding: 7px 10px;
+}
+
+.el-table td.tnxel-table_tags .cell {
+    padding: 0;
 }
 
 .el-table td.tnxel-table_tags .el-tag:not(:last-child),
 .el-table td.tnxel-table_tags .tnxel-table_tag:not(:last-child) {
     margin: 3px 6px 3px 0;
+}
+
+.el-table td.tnxel-table_tags .el-tag:last-child,
+.el-table td.tnxel-table_tags .tnxel-table_tag:last-child {
+    margin: 3px 0;
+}
+
+.el-table td.tnxel-table_tags.nowrap .cell {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.el-table td.tnxel-table_tags.nowrap.is-center .cell {
+    justify-content: center;
 }
