添加角色说明

--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -103,3 +103,7 @@ el-button {
 .el-table td.tnxel-table_tags.nowrap.is-center .cell {
     justify-content: center;
 }
+
+.el-alert .el-alert__content {
+    display: inline-flex;
+}
