--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -129,3 +129,9 @@ a:hover,
     cursor: pointer;
     text-decoration: none;
 }
+
+.el-pagination {
+    padding: 0;
+    margin-top: 1rem;
+    margin-right: -5px;
+}
