--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -36,7 +36,12 @@ body {
 }
 
 .el-form-item__error {
-    min-width: 96px;
+    padding-top: 1px;
+}
+
+.el-form-item__error.el-form-item__error--inline {
+    margin-left: 0;
+    padding-top: 0;
 }
 
 el-button {
