表单样式微调

--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -20,19 +20,13 @@ body {
 }
 
 .el-form-item__label {
-    padding-right: 10px;
+    padding-right: 1rem;
 }
 
 .el-form-item__label:before {
     content: '*';
     color: transparent;
     margin-right: 4px;
-}
-
-.el-form-item__content,
-.el-form-item__error,
-.el-input__inner {
-    padding-left: 10px;
 }
 
 .el-form-item__error {
