--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -134,3 +134,11 @@ a:hover,
     margin-top: 1rem;
     margin-right: -5px;
 }
+
+.el-tabs__item {
+    padding: 0 0.5rem;
+}
+
+[slot] {
+    display: none;
+}
