--- a/components/tnxcore.css
+++ b/components/tnxcore.css
@@ -7,3 +7,28 @@ a.plain:focus {
     color: inherit;
     text-decoration: none;
 }
+
+/**
+ * 水平和垂直都居中
+ */
+.flex-center {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;;
+}
+
+/**
+ * 垂直居中
+ */
+.flex-v-center {
+    display: flex !important;
+    align-items: center !important;;
+}
+
+/**
+ * 水平居中
+ */
+.flex-h-center {
+    display: flex !important;
+    justify-content: center !important;
+}
