调整灰色背景色

--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -270,7 +270,7 @@ el-button {
 }
 
 .bg-muted {
-    background-color: #C0C4CC !important;
+    background-color: #fafafa !important;
 }
 
 .bg-white {
