--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -244,6 +244,10 @@ el-button {
     color: #909399 !important;
 }
 
+.text-white {
+    color: #ffffff !important;
+}
+
 .bg-primary {
     background-color: #409EFF !important;
     color: #ffffff;
