--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -92,6 +92,15 @@ el-header a img,
     padding-top: 1px;
 }
 
+.el-form-item__content {
+    line-height: inherit;
+}
+
+.el-form-item__content p {
+    margin-block-start: 10px;
+    margin-block-end: 10px;
+}
+
 .el-form .el-card__body {
     padding: 1rem 1rem 0 1rem;
 }
