--- a/components/tnxcore.css
+++ b/components/tnxcore.css
@@ -32,3 +32,7 @@ a.plain:focus {
     display: flex !important;
     justify-content: center !important;
 }
+
+.w-fit-content {
+    width: fit-content;
+}
