修正行内错误消息位置

--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -88,8 +88,8 @@ el-header a img,
     margin-right: 4px;
 }
 
-.el-form-item__error {
-    padding-top: 1px;
+.el-form-item__error--inline {
+    margin-top: 10px;
 }
 
 .el-form-item__content {
