--- a/components/tnxcore.css
+++ b/components/tnxcore.css
@@ -1,8 +1,16 @@
 /*!
  * tnxcore.css
  */
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 a.plain,
-a.plain:hover
+a.plain:hover,
 a.plain:focus {
     color: inherit;
     text-decoration: none;
