--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -101,6 +101,10 @@ el-header a img,
     margin-block-end: 10px;
 }
 
+.el-card__body {
+    padding: 1rem;
+}
+
 .el-form .el-card__body {
     padding: 1rem 1rem 0 1rem;
 }
