修正下拉菜单中的图标位置

--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -289,6 +289,10 @@ el-button {
     border-right-color: #EBEEF5;
 }
 
+.el-dropdown-menu__item .el-avatar--icon i {
+    margin: 0;
+}
+
 .text-primary {
     color: #409EFF !important;
 }
