--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -103,7 +103,7 @@ el-header a img,
     margin-left: 4px;
 }
 
-.el-form--label-top button {
+.el-form--label-top button:not(.w-fit-content) {
     width: 100%;
 }
 
