--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -112,11 +112,11 @@ el-header a img,
     margin-left: 4px;
 }
 
-.el-form--label-top button:not(.w-fit-content) {
+.mx-auto .el-form--label-top .el-button:not(.w-fit-content) {
     width: 100%;
 }
 
-.el-form--label-top .el-button + .el-button {
+.mx-auto .el-form--label-top .el-button:not(.w-fit-content) + .el-button:not(.w-fit-content) {
     margin: 10px 0 0 0;
 }
 
