添加更便于使用的alert组件

--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -200,6 +200,10 @@ el-button {
     display: inline-flex;
 }
 
+.el-alert .el-alert__title {
+    font-size: 14px;
+}
+
 .el-message-box {
     vertical-align: unset;
 }
