修正激活的菜单项文本颜色为白色的问题

--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -345,6 +345,7 @@ el-button {
 }
 
 .bg-primary .el-menu-item:hover a,
+.bg-primary .el-menu-item.is-active a,
 .bg-primary .el-menu-item a:hover {
     color: #409EFF;
 }
