添加下拉菜单标题样式

--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -319,6 +319,10 @@ el-button {
     margin: 0;
 }
 
+.dropdown-item-title {
+    line-height: 20px;
+}
+
 .text-primary {
     color: #409EFF !important;
 }
