--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -519,3 +519,7 @@ el-button {
 .list-group .list-group-item + .list-group-item {
     border-top-width: 0;
 }
+
+.el-divider--horizontal {
+    margin: 1rem 0;
+}
