修正改动值后仍然校验字段必填的问题

--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -141,7 +141,8 @@ el-header a img,
     line-height: inherit;
 }
 
-.el-form-item__content > p,
+.el-form-item__content p,
+.el-form-item__content .static-text,
 .el-form-item__content > .el-checkbox-group {
     margin-block-start: 10px;
     margin-block-end: 10px;
