--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -134,19 +134,13 @@ el-header a img,
 }
 
 .el-form-item__error--inline {
-    margin-top: 10px;
+    margin-top: 0;
+    padding-top: 0;
 }
 
 .el-form-item__content {
-    line-height: inherit;
-}
-
-.el-form-item__content p,
-.el-form-item__content .static-text,
-.el-form-item__content > .el-radio-group > .el-radio,
-.el-form-item__content > .el-checkbox-group {
-    margin-block-start: 10px;
-    margin-block-end: 10px;
+    display: flex;
+    align-items: center;
 }
 
 .form-item-tip {
