--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -112,6 +112,25 @@ el-header a img,
     margin-left: 4px;
 }
 
+.tnxel-detail-form.form-columns-2,
+.tnxel-detail-form.form-columns-3,
+.tnxel-detail-form.form-columns-4 {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.tnxel-detail-form.form-columns-2 .el-form-item {
+    width: 50%;
+}
+
+.tnxel-detail-form.form-columns-3 .el-form-item {
+    width: 33.33%;
+}
+
+.tnxel-detail-form.form-columns-4 .el-form-item {
+    width: 25%;
+}
+
 .mx-auto .el-form--label-top .el-button:not(.w-fit-content) {
     width: 100%;
 }
