--- a/components/vue/element/tnxel.css
+++ b/components/vue/element/tnxel.css
@@ -329,6 +329,10 @@ el-button {
     padding: 1rem;
 }
 
+.el-tag {
+    display: flex;
+}
+
 .el-tag.rounded-pill {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
